tests/integration/snapshots/integration__conformance__y_number_double_close_to_zero.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 0
success: true
stdout ---
[-0.000000000000000000000000000000000000000000000000000000000000000000000000000001]

stderr ---
