tests/integration/snapshots/integration__conformance__y_number_int_with_exp.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[20e1]
stdout ---
[20e1]

stderr ---
