tests/integration/snapshots/integration__conformance__y_number_minus_zero.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[-0]
stdout ---
[-0]

stderr ---
