tests/integration/snapshots/integration__conformance__y_number_negative_int.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[-123]
stdout ---
[-123]

stderr ---
