tests/integration/snapshots/integration__conformance__y_number_negative_one.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
[-1]
stdout ---
[-1]

stderr ---
