tests/integration/snapshots/integration__conformance__y_number_negative_one.json.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[-1]
stdout ---
[-1]

stderr ---
